[workspace]
resolver = "2"

members = [
  "maelstrom-rs",
  "c1-echo",
]

[workspace.dependencies]
async-trait = "0.1.73"
maelstrom-rs = { path = "./maelstrom-rs" }
tokio = { version = "1.32.0", features = [ "full" ] }
tokio-test = "0.4.3"
serde = { version = "1.0.188", features = ["derive" ] }
serde_json = "1.0.107"