[workspace]
resolver = "2"

members = [
  "maelstrom-rs",
  "c1-echo",
  "c2-unique-id-generation",
]

[workspace.dependencies]
maelstrom-rs = { path = "./maelstrom-rs" }
tokio = { version = "1.32.0", features = [ "full" ] }
serde = { version = "1.0.188", features = ["derive" ] }
serde_json = "1.0.107"