[package]
name = "c1-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
maelstrom-rs = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0.188", features = ["derive"] }
