[package]
name = "c3-broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maelstrom-rs = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0.188", features = ["derive", "rc"] }
